--- a/style.css
+++ b/style.css
@@ -6,15 +6,35 @@
   box-sizing: border-box;
 }
 
+:root {
+  --card-color-primary: #f7dd43;
+  --card-title-border-color: #746615;
+  --card-bg-color: #1d1c19;
+  --bg: url("./assets/bg-yellow.svg");
+}
+
+body.blue {
+  --card-color-primary: #338af3;
+  --card-title-border-color: #338af3;
+  --card-bg-color: #202024;
+  --bg: url("./assets/bg-blue.svg");
+}
+
+body.green {
+  --card-color-primary: #047c3f;
+  --card-title-border-color: #047c3f;
+  --card-bg-color: #1a1f1b;
+  --bg: url("./assets/bg-green.svg");
+}
+
 ul {
   list-style: none;
 }
 
 body {
   background-color: #121214;
-  background-image: url("./assets/bg.svg");
-  background-position-x: center;
-  background-position-y: -715px;
+  background-image: var(--bg);
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -25,7 +45,8 @@ body * {
 
 #app {
   width: fit-content;
-  margin: 52px auto;
+  padding-top: 52px;
+  margin: auto;
 }
 
 header {
@@ -42,8 +63,8 @@ header {
 .card {
   padding: 32px 23px;
   text-align: center;
-  background: #1d1c19;
-  border-bottom: 2px solid #f7dd43;
+  background: var(--card-bg-color);
+  border-bottom: 2px solid var(--card-color-primary);
   border-radius: 6px;
 }
 
@@ -54,7 +75,7 @@ header {
   align-items: center;
 
   padding: 8px 16px;
-  border: 1px solid #746615;
+  border: 1px solid var(--card-title-border-color);
   border-radius: 6px;
 
   width: fit-content;
@@ -109,7 +130,8 @@ header {
 }
 
 .card {
-  animation: appear 1s;
+  opacity: 0;
+  animation: appear 1s forwards;
 }
 
 @keyframes appear {
@@ -120,5 +142,13 @@ header {
 
   100% {
     opacity: 1;
+  }
+}
+
+@media (min-width: 700px) {
+  #cards {
+    max-width: 670px;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
